# theforage-job-simulation

lyft-backend-engineering/task-0-software-architecture/: better-model.md
lyft-backend-engineering/task-1-refactor-messy-system/forage-lyft-starter-repo/: car.py
lyft-backend-engineering/task-1-refactor-messy-system/forage-lyft-starter-repo/battery/: battery.py  nubbin_battery.py  spindler_battery.py
lyft-backend-engineering/task-1-refactor-messy-system/forage-lyft-starter-repo/engine/: capulet_engine.py  engine.py  sternman_engine.py  willoughby_engine.py
standard-bank-software-engineering/task-0-jwt/task0/: build.gradle.kts  settings.gradle.kts
standard-bank-software-engineering/task1/: README.md  docker-compose.yml  pyproject.toml
standard-bank-software-engineering/task1/src/facial_image_encoding/: facial_image_encoding.py
standard-bank-software-engineering/task1/tests/facial_image_encoding/: test_facial_image_encoding.py
standard-bank-software-engineering/task2/: query.sql
standard-bank-software-engineering/task3/: pyproject.toml
standard-bank-software-engineering/task3/stdbank/: manage.py
walmart-global-tech-advance-software-engineering/task-1-design-system-and-uml-class-diagram/: uml-class.md
walmart-global-tech-advance-software-engineering/task-2-design-product-shipment-database/: erd.md
walmart-global-tech-advance-software-engineering/task-3-populate-database/: main.py
walmart-global-tech-advance-software-engineering/task-3-populate-database/forage-walmart-task-4/: shipment_database.db
(+27 files in other folders)
