[project]
name = "facial_image_encoding"
version = "0.0.0"
description = ""
authors = [
    {name = "xshadowlegendx", email = "lyheng0@gmail.com"},
]
dependencies = [
    "boto3>=1.33.1",
    "face-recognition>=1.3.0",
    "pymilvus>=2.3.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

